--- a/ExtIODll.rc
+++ b/ExtIODll.rc
@@ -112,11 +112,21 @@ BEGIN
     COMBOBOX        IDC_COMBO1,17,18,144,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     CONTROL         "",IDC_SLIDER5,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,197,30,77,15
     CONTROL         "ExtIO DLL I/Q Souce",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,23,42,82,10
+    CONTROL         "A / AB Audio",IDC_RADIO_CMODE1,"Button",BS_AUTORADIOBUTTON | WS_GROUP,67,63,56,10
+    CONTROL         "B",IDC_RADIO_CMODE2,"Button",BS_AUTORADIOBUTTON,67,74,20,10
+    CONTROL         "A+ B",IDC_RADIO_CMODE3,"Button",BS_AUTORADIOBUTTON,67,85,32,10
+    CONTROL         "A - B",IDC_RADIO_CMODE4,"Button",BS_AUTORADIOBUTTON,67,96,31,10
+    CONTROL         "B - A",IDC_RADIO_CMODE5,"Button",BS_AUTORADIOBUTTON,67,107,31,10
+    CONTROL         "A+ Holidays!",IDC_RADIO_CMODE6,"Button",BS_AUTORADIOBUTTON,67,118,57,10
+    CONTROL         "B+ Holidays!",IDC_RADIO_CMODE7,"Button",BS_AUTORADIOBUTTON,67,129,57,10
+    PUSHBUTTON      "Holidays!",IDC_BUTTON1,219,135,60,13,WS_DISABLED
     CONTROL         "",IDC_SLIDER1,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,175,60,100,15
     CONTROL         "",IDC_SLIDER2,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,175,79,100,15
-    CONTROL         "",IDC_SLIDER3,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,21,149,250,15
-    CONTROL         "",IDC_SLIDER4,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,21,176,250,15
-    DEFPUSHBUTTON   "OK",IDOK,231,308,50,14
+    CONTROL         "Sync Gain",IDC_CHECK2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,149,101,47,10
+    CONTROL         "Sync Tuning",IDC_CHECK3,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,149,114,55,10
+    CONTROL         "",IDC_SLIDER3,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,21,157,250,15
+    CONTROL         "",IDC_SLIDER4,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,21,184,250,15
+    DEFPUSHBUTTON   "OK",IDOK,222,308,59,14
     LTEXT           "Transparency",IDC_STATIC_TEST,201,19,45,8
     LTEXT           "Uses LayeredWindowHelper class by Davide Calabro.",IDC_STATIC,18,278,171,8
     LTEXT           "See LayeredWindowHelperST.h for license details.",IDC_STATIC,18,289,162,8
@@ -128,27 +138,48 @@ BEGIN
     LTEXT           "Gain B",IDC_STATIC,149,82,21,8
     LTEXT           "COM Ports enumeration class by Jochen Arndt.",IDC_STATIC,18,305,152,8
     LTEXT           "Licensed as The Code Project Open License (CPOL)",IDC_STATIC,18,315,164,8
-    LTEXT           "Phase A Coarse",IDC_STATIC,25,142,52,8
-    LTEXT           "Phase A Fine",IDC_STATIC,25,169,42,8
-    EDITTEXT        IDC_EDIT1,225,193,40,14,ES_AUTOHSCROLL | WS_DISABLED | NOT WS_BORDER | NOT WS_TABSTOP
-    LTEXT           "Ch A Phase:",IDC_STATIC,183,193,43,8
+    LTEXT           "Phase A Coarse",IDC_STATIC,25,150,52,8
+    LTEXT           "Phase A Fine",IDC_STATIC,25,177,42,8
+    EDITTEXT        IDC_EDIT1,225,201,40,14,ES_AUTOHSCROLL | WS_DISABLED | NOT WS_BORDER | NOT WS_TABSTOP
+    LTEXT           "Ch A Phase:",IDC_STATIC,183,201,43,8
     EDITTEXT        IDC_EDIT2,107,42,54,14,ES_RIGHT | ES_AUTOHSCROLL | WS_DISABLED | NOT WS_BORDER | NOT WS_TABSTOP
     LTEXT           "Radio FW Ver.",IDC_STATIC_FWVER,75,214,188,8
     LTEXT           "ExtIO DLL Ver.",IDC_STATIC_EXTIOVER,75,223,60,8
-    CONTROL         "A / AB Audio",IDC_RADIO_CMODE1,"Button",BS_AUTORADIOBUTTON | WS_GROUP,69,66,56,10
-    CONTROL         "B",IDC_RADIO_CMODE2,"Button",BS_AUTORADIOBUTTON,69,77,20,10
-    CONTROL         "A+ B",IDC_RADIO_CMODE3,"Button",BS_AUTORADIOBUTTON,69,88,32,10
-    CONTROL         "A - B",IDC_RADIO_CMODE4,"Button",BS_AUTORADIOBUTTON,69,99,31,10
-    CONTROL         "B - A",IDC_RADIO_CMODE5,"Button",BS_AUTORADIOBUTTON,69,110,31,10
-    GROUPBOX        "Channel",IDC_STATIC,24,60,109,62
-    CONTROL         "Sync Gain",IDC_CHECK2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,149,101,47,10
-    CONTROL         "Sync Tuning",IDC_CHECK3,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,149,114,55,10
-    LTEXT           "0",IDC_STATIC,18,151,8,8
-    RTEXT           "0.0",IDC_STATIC,7,177,13,8
-    LTEXT           "359",IDC_STATIC,272,150,17,8
-    LTEXT           "1.0",IDC_STATIC,271,177,18,8
+    GROUPBOX        "Channel",IDC_STATIC,22,57,109,85
+    LTEXT           "0",IDC_STATIC,18,159,8,8
+    RTEXT           "0.0",IDC_STATIC,7,185,13,8
+    LTEXT           "359",IDC_STATIC,272,158,17,8
+    LTEXT           "1.0",IDC_STATIC,271,185,18,8
     CONTROL         "Show Debug Console",IDC_CHECK4,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,200,272,89,10
     LTEXT           "LibUSB DLL Version Driver Version",IDC_STATIC_LIBUSBVER,75,232,193,8
+END
+
+IDD_DIALOG2 DIALOGEX 0, 0, 913, 237
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+EXSTYLE WS_EX_STATICEDGE
+CAPTION "Panadapter"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    LTEXT           "Range:",IDC_STATIC,37,218,24,8
+    EDITTEXT        IDC_EDIT1,65,217,154,12,ES_AUTOHSCROLL | WS_DISABLED
+    LTEXT           "Active:",IDC_STATIC,236,218,24,8
+    EDITTEXT        IDC_EDIT2,264,217,79,12,ES_AUTOHSCROLL | WS_DISABLED
+    LTEXT           "Speed:",IDC_STATIC,384,219,24,8
+    CONTROL         "",IDC_SLIDER1,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,410,214,159,15
+    CONTROL         "Custom3",IDC_CUSTOM1,"MFCRangeSlider",WS_TABSTOP,7,186,880,11
+    CONTROL         "Custom4",IDC_CUSTOM2,"MFCRangeSlider",WS_TABSTOP,895,14,11,160
+    LTEXT           "0 MHz",IDC_STATIC,7,197,25,8
+    LTEXT           "32 MHz",IDC_STATIC,862,197,25,8
+    LTEXT           "16 MHz",IDC_STATIC,439,197,25,8
+    LTEXT           "8 MHz",IDC_STATIC,221,197,31,8
+    LTEXT           "24 MHz",IDC_STATIC,655,197,37,8
+    LTEXT           "4 MHz",IDC_STATIC,111,197,25,8
+    LTEXT           "12 MHz",IDC_STATIC,327,197,25,8
+    LTEXT           "20 MHz",IDC_STATIC,551,197,25,8
+    LTEXT           "28 MHz",IDC_STATIC,762,197,25,8
+    GROUPBOX        "",IDC_WATERFALL,16,7,863,168,BS_BITMAP,WS_EX_CLIENTEDGE
+    LTEXT           "Fourier Class by Don Cross / Fred Ackers (waveIn) (The Code Project Open Lincense)",IDC_STATIC,606,212,290,9
+    LTEXT           "CRangeSlider Class by Jens Scheidtmann (Creative Commons BY-SA 3.0 License)",IDC_STATIC,606,220,290,9
 END
 
 
@@ -166,6 +197,14 @@ BEGIN
         RIGHTMARGIN, 289
         TOPMARGIN, 7
         BOTTOMMARGIN, 331
+    END
+
+    IDD_DIALOG2, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 906
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 229
     END
 END
 #endif    // APSTUDIO_INVOKED
