--- a/ExtIODll.vcproj
+++ b/ExtIODll.vcproj
@@ -22,9 +22,9 @@
 			IntermediateDirectory=".\Release"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
-			UseOfMFC="2"
+			UseOfMFC="1"
 			ATLMinimizesCRunTimeLibraryUsage="false"
-			CharacterSet="2"
+			CharacterSet="0"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -51,10 +51,11 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				InlineFunctionExpansion="1"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL"
-				StringPooling="true"
-				RuntimeLibrary="2"
-				EnableFunctionLevelLinking="true"
+				PreprocessorDefinitions="SERIAL_NO_OVERLAPPED; WIN32;_WINDOWS;_USRDLL;WINVER=0x0500;"
+				StringPooling="false"
+				MinimalRebuild="false"
+				RuntimeLibrary="0"
+				EnableFunctionLevelLinking="false"
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="stdafx.h"
 				PrecompiledHeaderFile=".\Release/MyDll.pch"
@@ -77,15 +78,18 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile=".\Release/MyDll.dll"
+				AdditionalDependencies="libusb.lib"
+				OutputFile=""
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				ModuleDefinitionFile=".\MyDll.def"
-				ProgramDatabaseFile=".\Release/MyDll.pdb"
+				AdditionalLibraryDirectories="libusb"
+				GenerateManifest="false"
+				ModuleDefinitionFile=".\ExtIODll.def"
+				ProgramDatabaseFile=""
 				SubSystem="2"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
-				ImportLibrary=".\Release/MyDll.lib"
+				ImportLibrary="Release\ExtIODll.lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -178,6 +182,7 @@
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories="libusb"
+				GenerateManifest="true"
 				ModuleDefinitionFile=".\ExtIODll.def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile=""
